# temploy

./: .gitignore  Cargo.toml  README.md
src/: deploy.rs  errors.rs  generate.rs  git.rs  lib.rs  main.rs
tests/: generate.rs
