[package]
name = "temploy"
version = "0.1.0"
authors = ["seanchen <skypemaster007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
clap = "2.33.3"
git2 = "0.13.14"
heck = "0.3.2"
serde = { version = "1.0.118", features = ["derive"] }
thiserror = "1.0.22"
walkdir = "2.3.1"
